--- a/react/package.json
+++ b/react/package.json
@@ -1,9 +1,12 @@
 {
   "name": "recipe",
   "version": "1.0.0",
+  "homepage": "https://rudlinkon.github.io/testrepo/",
   "description": "",
   "main": "./index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "mode=development webpack serve",
     "build": "mode=production webpack"
   },
@@ -20,6 +23,7 @@
     "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "gh-pages": "^6.0.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
