--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "homepage": "https://rudlinkon.github.io/testrepo/",
   "description": "",
-  "main": "./index.js",
+  "main": "./src/index.js",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
